--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/weatherFragment"
         android:name="ru.gmasalskih.weather3.screens.weather.WeatherFragment"
-        android:label="fragment_weather"
-        tools:layout="@layout/fragment_weather" >
+        android:label="@string/weather_city"
+        tools:layout="@layout/fragment_weather">
         <action
             android:id="@+id/action_weatherFragment_to_citySelectionFragment"
             app:destination="@id/citySelectionFragment" />
@@ -18,18 +18,21 @@
             app:destination="@id/dateSelectionFragment" />
         <action
             android:id="@+id/action_weatherFragment_to_cityWebPageFragment"
-            app:destination="@id/cityWebPageFragment" />
+            app:destination="@id/cityWebPageFragment" >
+            <argument
+                android:name="urlWebPage" />
+        </action>
     </fragment>
     <fragment
         android:id="@+id/aboutFragment"
         android:name="ru.gmasalskih.weather3.screens.about.AboutFragment"
-        android:label="fragment_about"
+        android:label="@string/about"
         tools:layout="@layout/fragment_about" />
     <fragment
         android:id="@+id/citySelectionFragment"
         android:name="ru.gmasalskih.weather3.screens.city_selection.CitySelectionFragment"
-        android:label="fragment_city_selection"
-        tools:layout="@layout/fragment_city_selection" >
+        android:label="@string/city_selection"
+        tools:layout="@layout/fragment_city_selection">
         <action
             android:id="@+id/action_citySelectionFragment_to_weatherFragment"
             app:destination="@id/weatherFragment" />
@@ -37,13 +40,17 @@
     <fragment
         android:id="@+id/cityWebPageFragment"
         android:name="ru.gmasalskih.weather3.screens.city_web_page.CityWebPageFragment"
-        android:label="fragment_city_web_page"
-        tools:layout="@layout/fragment_city_web_page" />
+        android:label="@string/city_web_page"
+        tools:layout="@layout/fragment_city_web_page" >
+        <argument
+            android:name="urlWebPage"
+            app:argType="string" />
+    </fragment>
     <fragment
         android:id="@+id/dateSelectionFragment"
         android:name="ru.gmasalskih.weather3.screens.date_selection.DateSelectionFragment"
-        android:label="fragment_date_selection"
-        tools:layout="@layout/fragment_date_selection" >
+        android:label="@string/date_selection"
+        tools:layout="@layout/fragment_date_selection">
         <action
             android:id="@+id/action_dateSelectionFragment_to_weatherFragment"
             app:destination="@id/weatherFragment" />
@@ -51,11 +58,11 @@
     <fragment
         android:id="@+id/favoriteCityFragment"
         android:name="ru.gmasalskih.weather3.screens.favorite_city.FavoriteCityFragment"
-        android:label="fragment_favorite_city"
+        android:label="@string/favorite_city"
         tools:layout="@layout/fragment_favorite_city" />
     <fragment
         android:id="@+id/settingsFragment"
         android:name="ru.gmasalskih.weather3.screens.settings.SettingsFragment"
-        android:label="fragment_settings"
+        android:label="@string/settings"
         tools:layout="@layout/fragment_settings" />
 </navigation>
