--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -26,6 +26,10 @@
             android:name="cityName"
             app:argType="string"
             android:defaultValue="City #1" />
+        <argument
+            android:name="date"
+            app:argType="string"
+            android:defaultValue="2020-01-01" />
     </fragment>
     <fragment
         android:id="@+id/aboutFragment"
@@ -58,6 +62,9 @@
         <action
             android:id="@+id/action_dateSelectionFragment_to_weatherFragment"
             app:destination="@id/weatherFragment" />
+        <argument
+            android:name="cityName"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/favoriteCityFragment"
