add RecyclerView to Favorite List Cities

--- a/app/src/main/res/layout/fragment_favorite_city.xml
+++ b/app/src/main/res/layout/fragment_favorite_city.xml
@@ -5,20 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".screens.favorite_city.FavoriteCityFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <data>
+        <variable
+            name="viewModel"
+            type="ru.gmasalskih.weather3.screens.favorite_city.FavoriteCityViewModel" />
+    </data>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/favorite_city_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="FavoriteCityFragment"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
 </layout>
