--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -93,7 +93,7 @@
             tools:hint="80%" />
 
         <TextView
-            android:id="@+id/cityName"
+            android:id="@+id/city_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
