--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -126,6 +126,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
             android:src="@drawable/ic_favorite_border_black_24dp"
+            android:onClick="@{() -> viewModel.onToggleFavoriteCity()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
