--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -5,7 +5,6 @@
     tools:context=".screens.weather.WeatherFragment">
 
     <data>
-
         <variable
             name="viewModel"
             type="ru.gmasalskih.weather3.screens.weather.WeatherViewModel" />
@@ -49,7 +48,7 @@
             android:layout_marginEnd="16dp"
             android:text="@{@string/temp_format(viewModel.currentWeather.temp)}"
             android:textSize="42sp"
-            app:layout_constraintEnd_toStartOf="@+id/windSpeed"
+            app:layout_constraintEnd_toStartOf="@+id/wind_speed"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="@+id/weather_icon"
@@ -57,7 +56,7 @@
             tools:hint="10C" />
 
         <TextView
-            android:id="@+id/windSpeed"
+            android:id="@+id/wind_speed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{@string/windSpeed_format(viewModel.currentWeather.windSpeed)}"
@@ -74,10 +73,10 @@
             android:layout_height="wrap_content"
             android:text="@{@string/pressure_format(viewModel.currentWeather.pressure)}"
             app:layout_constraintBottom_toTopOf="@+id/humidity"
-            app:layout_constraintEnd_toEndOf="@+id/windSpeed"
+            app:layout_constraintEnd_toEndOf="@+id/wind_speed"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/windSpeed"
-            app:layout_constraintTop_toBottomOf="@+id/windSpeed"
+            app:layout_constraintStart_toStartOf="@+id/wind_speed"
+            app:layout_constraintTop_toBottomOf="@+id/wind_speed"
             tools:hint="733 mm Hg" />
 
         <TextView
@@ -86,9 +85,9 @@
             android:layout_height="wrap_content"
             android:text="@{@string/humidity_format(viewModel.currentWeather.humidity)}"
             app:layout_constraintBottom_toBottomOf="@+id/temp"
-            app:layout_constraintEnd_toEndOf="@+id/windSpeed"
+            app:layout_constraintEnd_toEndOf="@+id/wind_speed"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/windSpeed"
+            app:layout_constraintStart_toStartOf="@+id/wind_speed"
             app:layout_constraintTop_toBottomOf="@+id/pressure"
             tools:hint="80%" />
 
@@ -109,7 +108,7 @@
             tools:hint="City #1" />
 
         <ImageView
-            android:id="@+id/cityWebPage"
+            android:id="@+id/city_web_page"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
@@ -120,7 +119,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
-            android:id="@+id/favoriteCity"
+            android:id="@+id/favorite_city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
