--- a/app/src/main/res/layout/fragment_city_selection.xml
+++ b/app/src/main/res/layout/fragment_city_selection.xml
@@ -6,20 +6,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".screens.city_selection.CitySelectionFragment">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="ru.gmasalskih.weather3.screens.city_selection.CitySelectionViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/enter_city_name"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="CitySelectionFragment"
+            android:layout_marginStart="32dp"
+            android:ems="10"
+            android:inputType="text"
+            android:hint="@string/enter_city_name_hint"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/confirm_city_name"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/confirm_city_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:text="@string/confirm_city_name_btn"
+            android:onClick="@{() -> viewModel.onCityConfirm()}"
+            app:layout_constraintBottom_toBottomOf="@+id/enter_city_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/enter_city_name"
+            app:layout_constraintTop_toTopOf="@+id/enter_city_name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
