--- a/app/src/main/res/layout/fragment_city_selection.xml
+++ b/app/src/main/res/layout/fragment_city_selection.xml
@@ -20,14 +20,13 @@
             android:id="@+id/enter_city_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:ems="10"
-            android:inputType="text"
             android:hint="@string/enter_city_name_hint"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:inputType="text"
             app:layout_constraintEnd_toStartOf="@+id/confirm_city_name"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,24 +34,27 @@
             android:id="@+id/confirm_city_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:text="@string/confirm_city_name_btn"
+            android:layout_marginEnd="8dp"
             android:onClick="@{() -> viewModel.onCityConfirm()}"
+            android:text="@string/confirm_city_name_btn"
             app:layout_constraintBottom_toBottomOf="@+id/enter_city_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/enter_city_name"
             app:layout_constraintTop_toTopOf="@+id/enter_city_name" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Этого TextView в проде не будет!!! Здесь нужно ввести имя города в формате City #_. В конце, вместо _, имени города нужно подставить цифру от 1 до 10. Нпример City #6."
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/selection_city_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/enter_city_name" />
+            app:layout_constraintTop_toBottomOf="@+id/enter_city_name"
+            app:layout_constraintVertical_bias="0.0" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
