--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -98,10 +98,10 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:gravity="center"
-            android:text="@{viewModel.currentWeather.city.name}"
-            android:textSize="36sp"
             android:onClick="@{()-> viewModel.onCitySelect()}"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="@{viewModel.cityName}"
+            android:textSize="36sp"
+            app:layout_constraintBottom_toTopOf="@+id/city_web_page"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/temp"
