--- a/app/src/main/res/layout/list_item_city_selection.xml
+++ b/app/src/main/res/layout/list_item_city_selection.xml
@@ -5,8 +5,8 @@
 
     <data>
         <variable
-            name="citySelection"
-            type="ru.gmasalskih.weather3.data.CitySelection" />
+            name="city"
+            type="ru.gmasalskih.weather3.data.City" />
 
         <variable
             name="clickListener"
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:onClick="@{()->clickListener.onClick(citySelection)}"
+        android:onClick="@{()->clickListener.onClick(city)}"
         app:cardCornerRadius="4dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,13 +26,13 @@
             android:layout_margin="8dp">
 
             <TextView
-                android:id="@+id/address_line"
+                android:id="@+id/city_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:textSize="14sp"
-                app:cityAddressLine="@{citySelection}"
-                app:layout_constraintBottom_toTopOf="@+id/country_name"
+                app:cityName="@{city}"
+                app:layout_constraintBottom_toTopOf="@+id/address_line"
                 app:layout_constraintEnd_toStartOf="@+id/country_name_code"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -40,15 +40,15 @@
                 tools:hint="City" />
 
             <TextView
-                android:id="@+id/country_name"
+                android:id="@+id/address_line"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                app:cityCountryName="@{citySelection}"
+                app:cityAddressLine="@{city}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/country_name_code"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/address_line"
+                app:layout_constraintTop_toBottomOf="@+id/city_name"
                 tools:hint="Russia" />
 
             <TextView
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="30sp"
-                app:cityCountyCode="@{citySelection}"
+                app:cityCountyCode="@{city}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
