--- a/app/src/main/res/layout/list_item_favorite_city.xml
+++ b/app/src/main/res/layout/list_item_favorite_city.xml
@@ -52,7 +52,7 @@
                 android:id="@+id/city_lon"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:cityLat="@{city}"
+                app:cityLon="@{city}"
                 app:layout_constraintBottom_toTopOf="@+id/city_lat"
                 app:layout_constraintEnd_toStartOf="@+id/favorite_icon"
                 app:layout_constraintHorizontal_bias="0.0"
