--- a/app/src/main/res/layout/list_item_favorite_city.xml
+++ b/app/src/main/res/layout/list_item_favorite_city.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="city"
-            type="ru.gmasalskih.weather3.data.entity.City" />
+            type="ru.gmasalskih.weather3.data.entity.Location" />
 
         <variable
             name="clickListener"
