--- a/app/src/main/res/layout/list_item_city_selection.xml
+++ b/app/src/main/res/layout/list_item_city_selection.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="city"
-            type="ru.gmasalskih.weather3.data.entity.City" />
+            type="ru.gmasalskih.weather3.data.entity.Location" />
 
         <variable
             name="clickListener"
